<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f5f5f5"
        android:orientation="vertical">

        <com.shenyuan.superapp.base.widget.TitleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ps_title="@string/edit_password_title"
            app:ps_title_background_color="@color/color_f5f5f5" />


        <com.shenyuan.superapp.common.widget.DeleteEditText
            android:id="@+id/dt_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_ffffff"
            android:padding="5dp"
            app:ps_delete_hint="@string/edit_input_old_password"
            app:ps_delete_input_type="password"
            app:ps_delete_text_size="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/edit_default_passwrod"
            android:textColor="@color/color_999999"
            android:textSize="12sp" />

        <com.shenyuan.superapp.common.widget.DeleteEditText
            android:id="@+id/dt_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_ffffff"
            android:padding="5dp"
            app:ps_delete_hint="@string/edit_input_new_password"
            app:ps_delete_input_type="password"
            app:ps_delete_text_size="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/edit_password_format"
            android:textColor="@color/color_999999"
            android:textSize="12sp" />

        <com.shenyuan.superapp.common.widget.DeleteEditText
            android:id="@+id/dt_new_pwd_agin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_ffffff"
            android:padding="5dp"
            app:ps_delete_hint="@string/edit_input_new_password_agin"
            app:ps_delete_input_type="password"
            app:ps_delete_text_size="16sp" />

        <com.shenyuan.superapp.base.widget.PSTextView
            android:id="@+id/tv_submit"
            style="@style/btn_single_blue"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:text="@string/edit_submit" />

    </LinearLayout>
</layout>