<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f5f5f5"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.shenyuan.superapp.base.widget.TitleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ps_title="@string/edit_tel_title"
            app:ps_title_background_color="@color/color_f5f5f5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_ffffff"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="+86"
                android:textColor="@color/color_333333"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/edit_tel_new"
                android:inputType="phone"
                android:padding="10dp"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:text="@string/edit_tel_use_new_tel_to_login"
            android:textColor="@color/color_999999"
            android:textSize="12sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/color_ffffff"
            android:orientation="horizontal">

            <com.shenyuan.superapp.common.widget.TipEditText
                android:id="@+id/et_msg_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@color/color_ffffff"
                android:paddingStart="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_get_msg_code"
                app:layout_constraintTop_toTopOf="parent"
                app:ps_error_show_line="false"
                app:ps_tip_hint="@string/forgot_input_msg_code"
                app:ps_tip_hint_size="16sp" />

            <TextView
                android:id="@+id/tv_get_msg_code"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/forgot_send_msg"
                android:textColor="@color/color_999999"
                app:layout_constraintBottom_toBottomOf="@id/et_msg_code"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/et_msg_code" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="15dp"
                android:background="@color/color_666666"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/tv_get_msg_code"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_forget_cant_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:text="@string/forgot_verify_code_not_received"
            android:textColor="@color/color_999999"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_msg_code" />

        <com.shenyuan.superapp.base.widget.PSTextView
            android:id="@+id/tv_forget_next"
            style="@style/btn_single_blue"
            android:layout_marginTop="50dp"
            android:text="@string/forgot_sure" />

    </LinearLayout>
</layout>