<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f5f5f5"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.shenyuan.superapp.base.widget.TitleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ps_title="@string/forgot_reset_password_title"
            app:ps_title_background_color="@color/color_f5f5f5" />

        <TextView
            android:id="@+id/tv_verify_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_ffffff"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <com.shenyuan.superapp.common.widget.DeleteEditText
                android:id="@+id/et_verify_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:background="@color/color_ffffff"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/iv_verify_code"
                app:layout_constraintTop_toTopOf="parent"
                app:ps_delete_hint="@string/forgot_verify_code"
                app:ps_delete_text_size="16sp" />

            <ImageView
                android:id="@+id/iv_verify_code"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintBottom_toBottomOf="@id/et_verify_code"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/et_verify_code" />

            <TextView
                android:id="@+id/tv_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_refresh"
                android:textColor="@color/color_666666"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="@id/iv_verify_code"
                app:layout_constraintRight_toRightOf="@id/iv_verify_code"
                app:layout_constraintTop_toBottomOf="@id/iv_verify_code" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.shenyuan.superapp.base.widget.PSTextView
            android:id="@+id/tv_forget_hotline_next"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/forgot_next"
            android:textColor="@color/color_ffffff"
            android:textSize="16sp"
            app:ps_background_color="@color/color_0077ff"
            app:ps_radius="4dp" />

    </LinearLayout>
</layout>