<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_ffffff"
        tools:context=".ui.MainActivity">


        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/rg_main"
            app:layout_constraintTop_toTopOf="parent" />

        <com.shenyuan.superapp.base.widget.PSTextView
            android:id="@+id/tv_big_data"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:ps_background_color="@color/color_3cbf7f"
            app:ps_radius="30dp"
            tools:ignore="MissingConstraints" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_eeeeee"
            app:layout_constraintTop_toTopOf="@id/rg_main" />

        <RadioGroup
            android:id="@+id/rg_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <RadioButton
                android:id="@+id/rb_main_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/selector_main_home"
                android:gravity="center"
                android:text="@string/bottom_home"
                android:textColor="@drawable/selector_main_bottom_text_color"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rb_main_square"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/selector_main_square"
                android:gravity="center"
                android:text="@string/bottom_square"
                android:textColor="@drawable/selector_main_bottom_text_color"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rb_main_msg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/selector_main_msg"
                android:gravity="center"
                android:text="@string/bottom_msg"
                android:textColor="@drawable/selector_main_bottom_text_color"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rb_main_my"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/selector_main_my"
                android:gravity="center"
                android:text="@string/bottom_my"
                android:textColor="@drawable/selector_main_bottom_text_color"
                android:textSize="12sp" />

        </RadioGroup>

        <com.shenyuan.superapp.base.widget.PSTextView
            android:id="@+id/tv_msg_count"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:minWidth="12dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:textColor="@color/color_ffffff"
            android:textSize="8sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.66"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/rg_main"
            app:ps_background_color="@color/color_fc602d"
            app:ps_radius="10dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>