<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f5f5f5"
        android:orientation="vertical">


        <com.shenyuan.superapp.base.widget.TitleView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ps_title="@string/more_title"
            app:ps_title_background_color="@color/color_f5f5f5" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            app:cardBackgroundColor="@color/color_ffffff"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_my_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/more_my_application"
                    android:textColor="@color/color_333333"
                    android:textSize="16sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_more_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_more_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/more_cancel"
                        android:textColor="@color/color_333333"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_more_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/more_sure"
                        android:textColor="@color/color_0077ff"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_cust_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never" />

                <LinearLayout
                    android:id="@+id/ll_drag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/iv_drag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/ic_arrow_more_up" />
                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_more"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@color/color_f5f5f5"
            app:tabGravity="center"
            app:tabIndicatorColor="@color/color_0077ff"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorGravity="bottom"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/color_0077ff"
            app:tabTextAppearance="@android:style/TextAppearance.Holo.Inverse"
            app:tabTextColor="@color/color_333333">


        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_ffffff"
            android:overScrollMode="never" />


    </LinearLayout>
</layout>